{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 56,
  "lineage": "353a250a-cad7-fc69-e219-f3dec3429641",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0b2b9656596a003",
            "association_id": "eipassoc-0090c53d75558544c",
            "domain": "vpc",
            "id": "eipalloc-0c0b2b9656596a003",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ae6ad72c793b5a7",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-52-22-221-78.compute-1.amazonaws.com",
            "public_ip": "52.22.221.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:internet-gateway/igw-09447656331b0ff1e",
            "id": "igw-09447656331b0ff1e",
            "owner_id": "248217947790",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0b2b9656596a003",
            "connectivity_type": "public",
            "id": "nat-01682e13e979fdb95",
            "network_interface_id": "eni-09ae6ad72c793b5a7",
            "private_ip": "10.0.1.86",
            "public_ip": "52.22.221.78",
            "subnet_id": "subnet-08be42becda259e8c",
            "tags": {
              "Name": "natgateway"
            },
            "tags_all": {
              "Name": "natgateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub-sub-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnetvpc-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:route-table/rtb-00029cf25c6ed1f4c",
            "id": "rtb-00029cf25c6ed1f4c",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09447656331b0ff1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Subnetvpc-RT"
            },
            "tags_all": {
              "Name": "Public-Subnetvpc-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-Subnetvpc-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:route-table/rtb-06455ec3e93c5675c",
            "id": "rtb-06455ec3e93c5675c",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01682e13e979fdb95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-Subnetvpc-RT"
            },
            "tags_all": {
              "Name": "private-Subnetvpc-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgateway",
            "aws_subnet.pub-sub-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221530fce4174148",
            "route_table_id": "rtb-00029cf25c6ed1f4c",
            "subnet_id": "subnet-08be42becda259e8c"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnetvpc-RT",
            "aws_subnet.pub-sub-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b87bc247a55cfe84",
            "route_table_id": "rtb-00029cf25c6ed1f4c",
            "subnet_id": "subnet-0caabb181e88bdece"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnetvpc-RT",
            "aws_subnet.pub-sub-2",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb6c774c2d93cdb6",
            "route_table_id": "rtb-06455ec3e93c5675c",
            "subnet_id": "subnet-0cd9215e26a3be604"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgateway",
            "aws_route_table.private-Subnetvpc-RT",
            "aws_subnet.private-sub-1",
            "aws_subnet.pub-sub-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031227eecabae694b",
            "route_table_id": "rtb-06455ec3e93c5675c",
            "subnet_id": "subnet-0992665b51e471e02"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgateway",
            "aws_route_table.private-Subnetvpc-RT",
            "aws_subnet.private-sub-2",
            "aws_subnet.pub-sub-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-0cd9215e26a3be604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd9215e26a3be604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-0992665b51e471e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992665b51e471e02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-08be42becda259e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08be42becda259e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1"
            },
            "tags_all": {
              "Name": "pub-sub-1"
            },
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-0caabb181e88bdece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caabb181e88bdece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2"
            },
            "tags_all": {
              "Name": "pub-sub-2"
            },
            "vpc_id": "vpc-03ce6a23a249d5ab4"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:vpc/vpc-03ce6a23a249d5ab4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0d3ba65a1044fd168",
            "default_route_table_id": "rtb-0fb512f76c99661e8",
            "default_security_group_id": "sg-0c85a9042d7e38a43",
            "dhcp_options_id": "dopt-0d6feb74c672dda5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03ce6a23a249d5ab4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb512f76c99661e8",
            "owner_id": "248217947790",
            "tags": {
              "Name": "customvpc"
            },
            "tags_all": {
              "Name": "customvpc"
            }
          }
        }
      ]
    }
  ]
}